--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 
 </div>
 
-<script src="script.js"></script>
+<div id="loading-overlay" style="display: none;">
+  <div class="spinner"></div>
+</div>
+
+<div id="success-popup">Sincronizzazione completata!</div>
+
+<script type="module" src="./js/script.js"></script>
 </body>
 </html>
