--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <div class="col">Descrizione</div>
       <div class="col">Importo</div>
       <div class="col">Data</div>
+      <button class="header-btn">✖</button>
     </div>
     <ul id="lista-spese" class="lista-righe"></ul>
   </div>
