--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-<div id="login">
-  <h1>Login</h1>
-  <input type="password" id="password" placeholder="Password">
-  <button onclick="login()">Entra</button>
-  <div id="login-error" style="color: red; display: none;">Password errata</div>
-</div>
+  <div id="login">
+    <h1>Login</h1>
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="login()">Entra</button>
+    <div id="login-error">Password errata</div>
+  </div>
 
 <div id="app" style="display: none;">
 
